# wallet-live

./: .dockerignore  .env  Cargo.toml  Dockerfile  Readme.md  compose.yml
.github/workflows/: ci.yml  deploy-render.yml
.sqlx/: query-03942daeb2dfc53d8cb6f481abceec5744f2b4a7890b725474c1c06b26bdda93.json  query-10c02fc6baa7869b49550c70bf82a4cd8fd607d4b168cc47a02c592b7a946f42.json  query-31e952e212be81f8c896e6a0fac4fae0d22e1cac7f1d6361eb456fc0e62bee2f.json  query-617aac04a62522077a2889cf9fbe3d48dd2616c31da905a5051937b1e44e61e4.json  query-6e72b8447bb1441e1665bfe595b06734d50685700ad76bc0021ae565ec91fbe0.json  query-7c5655bc7550197106fd38e189debb87a77cfe78881f561b9386bad9203cc225.json  query-7f398b24511db064875789e2258d4832dd30f251e63c5a92082ae4d0b4022ac5.json  query-a42a9d8612b473d04424aec62b0f61a41bd17b1f8adcbf2e46aaafa5d7669ab2.json  query-a945ddaa557518ee0b60224947d11e979588b45f0d60987877aa81add1404503.json  query-db680ef772116d12ad75570f095732fb0148e02c635eca217494335ed1b13701.json  query-f036668b585dc29b6541883ff2e863aed0908936851b3dcf5fd21f58056e2e22.json
curl/: get.sh  get_user.sh  patch.sh  post.sh
migrations/: 20260712013749_create_assets.down.sql  20260712013749_create_assets.up.sql  20260712173638_create_users.down.sql  20260712173638_create_users.up.sql  20260713163820_owned_assets.down.sql  20260713163820_owned_assets.up.sql  20260714120000_add_asset_symbols.down.sql  20260714120000_add_asset_symbols.up.sql
src/: app.rs  main.rs  models.rs
src/auth/: admin.rs  user.rs
src/error/: app_error.rs
src/repository/: mod.rs  repository_manager.rs
src/repository/fixtures/: bitcoin_asset.sql
src/routes/: api.rs  front_end.rs  mod.rs
src/services/: brapi.rs  mod.rs
templates/: assets.html  home.html  login.html  profile.html  register.html
templates/partials/: footer.html
(+3 files in other folders)
