[package]
name = "wallet-live"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["derive"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie-signed"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jwt-simple = "0.12.17"
password-auth = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
